@@ -13,18 +13,34 @@
 rgl.points(x, y = NULL, z = NULL, ... )
 rgl.lines(x, y = NULL, z = NULL, ... )
 rgl.linestrips(x, y = NULL, z = NULL, ...)
-rgl.triangles(x, y = NULL, z = NULL, ... )
-rgl.quads(x, y = NULL, z = NULL, ... )
+rgl.triangles(x, y = NULL, z = NULL, normals=NULL, texcoords=NULL, ... )
+rgl.quads(x, y = NULL, z = NULL, normals=NULL, texcoords=NULL, ... )
 }
 \arguments{
   \item{x, y, z}{coordinates.  Any reasonable way of defining the
     coordinates is acceptable.  See the function \code{\link[grDevices]{xyz.coords}}
     for details.}
+  \item{normals}{Normals at each point.}
+  \item{texcoords}{Texture coordinates at each point.}
   \item{ ... }{Material properties. See \code{\link{rgl.material}} for details.}  
 }
 \details{
   Adds a shape node to the scene. The appearance is defined by the material properties.
   See \code{\link{rgl.material}} for details.
+  
+  For triangles and quads, the normals at each vertex may be specified
+  using \code{normals}.  These may be given in any way that would be
+  acceptable as a single argument to \code{\link[grDevices]{xyz.coords}}.  
+  These need not match the actual normals to the polygon:
+  curved surfaces can be simulated by using other choices of normals.
+  
+  Texture coordinates may also be specified.  These may be given in
+  any way that would be acceptable as a single argument to 
+  \code{\link[grDevices]{xy.coords}}, and are interpreted in terms
+  of the bitmap specified as the material texture, with \code{(0,0)} 
+  at the lower left, \code{(1,1)} at the upper right.  The texture
+  is used to modulate the colour of the polygon.
+  
 }
 \value{
    Each primitive function returns the integer object ID of the shape that
