@@ -2,6 +2,7 @@
 
 #include "opengl.hpp"
 #include "Texture.hpp"
+#include "R.h"
 
 //////////////////////////////////////////////////////////////////////////////
 //
